[package]
name = "takuist"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.4"
tokio = { version = "1.12.0", features = ["full"] }
cursive = "0.16.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"